--- a/manifest.json
+++ b/manifest.json
@@ -14,5 +14,8 @@
     "action": {
         "default_popup": "popup.html"
     },
+    "chrome_url_overrides": {
+        "newtab": "index.html"
+    },
     "options_page": "options.html"
 }
